@@ -40,6 +40,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #12650: Fix a race condition where a subprocess.Popen could leak
+  resources (FD/zombie) when killed at the wrong time.
+
 - Issue #12752: Fix regression which prevented locale.normalize() from
   accepting unicode strings.
 
